--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -24,3 +24,9 @@
     scrollback_infinite = True
     scrollbar_position = hidden
     use_system_font = False
+  [[Day]]
+    background_color = "#ffffff"
+    cursor_color = "#aaaaaa"
+    foreground_color = "#000000"
+    scrollback_infinite = True
+    scrollbar_position = hidden
