--- a/backup_scripts/backup.template
+++ b/backup_scripts/backup.template
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 LOG_DIRECTORY="/var/log/backup_logs"
-LOG="$LOG_DIRECTORY/template.log" # todo
+LOG="$LOG_DIRECTORY/template.log"       # TODO change log file
 
 function timestamp() {
     echo [$(date '+%Y-%m-%d %H:%M:%S')]
@@ -22,7 +22,7 @@ fi
 
 log "Starting update procedure"
 
-BACKUP_MOUNT="/hdd/mybook"
+BACKUP_MOUNT="/hdd/mybook"              # TODO change mountpoint
 
 if [[ ! -d ${BACKUP_MOUNT} ]]; then
     log "Creating mount point for backup device"
