--- a/misc/todo.cfg
+++ b/misc/todo.cfg
@@ -93,4 +93,4 @@ export COLOR_CONTEXT=$BOLD
 # priority hiding, context hiding, and project hiding. That is,
 # just before the list output is displayed.
 #
-# export TODOTXT_FINAL_FILTER='cat'
+export TODOTXT_FINAL_FILTER='less'
