Deactived some bindings

--- a/misc/tmux.conf
+++ b/misc/tmux.conf
@@ -27,8 +27,8 @@ set -g history-limit 10000
 bind Escape copy-mode
 unbind p
 bind p paste-buffer
-bind -T vi-copy 'v' begin-selection
-bind -T vi-copy 'y' copy-selection
+# bind -T vi-copy 'v' begin-selection
+# bind -T vi-copy 'y' copy-selection
 
 # Bind split pane commands
 bind | split-window -h
