Did a neovim healthcheck

--- a/misc/tmux.conf
+++ b/misc/tmux.conf
@@ -8,7 +8,8 @@ set -g prefix C-x
 bind C-x send-prefix
 
 # Set the terminal type
-set -g default-terminal "tmux-256color"
+set -g default-terminal "screen-256color"
+set-option -sg escape-time 10
 
 # Move status bar to the top
 set-option -g status-position top
