Made the tmux config useable

--- a/misc/tmux.conf
+++ b/misc/tmux.conf
@@ -3,39 +3,50 @@
 #
 
 # Set the prefix
-unbind C-b
-set -g prefix C-x
+set -g prefix C-x  # 
+unbind C-b  # unbind send prefix
 bind C-x send-prefix
 
 # Set the terminal type
 set -g default-terminal "screen-256color"
+set-window-option -g xterm-keys on
 set-option -sg escape-time 10
 
 # Move status bar to the top
 set-option -g status-position top
+set-window-option -g automatic-rename off
+set-window-option -g allow-rename off
+set-window-option -g aggressive-resize on
+
+# Use vim bindings in the copy mode
+set-window-option -g mode-keys vi
+set -g status-keys vi
+set -g history-limit 10000
 
 # Set mouse options
-# setw -g mode-mouse on
+set -g mouse on
 # set -g mouse-select-pane on
 # set -g mouse-resize-pane on
 # set -g mouse-select-window on
 
-# Use vim bindings in the copy mode
-set -g mode-keys vi
-set -g history-limit 10000
+# Bind key for reloading the config
+bind C-r source-file ~/.tmux.conf\; display-message "Config reloaded..."
 
-# Bind p,v and y vim like
-bind Escape copy-mode
-unbind p
-bind p paste-buffer
-# bind -T vi-copy 'v' begin-selection
-# bind -T vi-copy 'y' copy-selection
+# Edit configuration and reload
+bind C-e new-window -n 'tmux.conf' "sh -c '\${EDITOR:-vim} ~/.tmux.conf"
+
+# New window with same cwd
+bind c new-window -c "#{pane_current_path}"
+
+# Prompt for session/window name
+bind r command-prompt -I "#{window_name}" "rename-window '%%'"
+bind R command-prompt -I "#{session_name}" "rename-session '%%'"
 
 # Bind split pane commands
-bind | split-window -h
-bind - split-window -v
-unbind '"'
-unbind %
+unbind '"'  # unbind split vertically
+unbind %    # unbind split horizontally
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 
 # Bind vim keys for moving between panes
 bind h select-pane -L
@@ -52,3 +63,33 @@ bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
+
+# Set keybings for the command prompt
+
+# Set keybindings for the copy mode
+bind Escape copy-mode
+
+unbind p
+bind p paste-buffer
+bind C-p choose-buffer
+
+unbind -T copy-mode-vi Space  # unbind begin selection
+
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+bind -T copy-mode-vi Enter send-keys -X copy-selection-and-cancel
+bind -T copy-mode-vi Y send-keys -X copy-line-and-cancel
+
+unbind -T copy-mode-vi C-u  # unbind half-page up
+unbind -T copy-mode-vi C-b  # unbind page up
+unbind -T copy-mode-vi C-d  # unbind half-page down
+unbind -T copy-mode-vi C-f  # unbind page down
+
+bind -T copy-mode-vi u send-keys -X halfpage-up
+bind -T copy-mode-vi U send-keys -X page-up
+bind -T copy-mode-vi d send-keys -X halfpage-down
+bind -T copy-mode-vi D send-keys -X page-down
+
+# Handle mouse scrolling
+bind -T copy-mode-vi WheelUpPane select-pane \; send-keys -X -N 2 scroll-up
+bind -T copy-mode-vi WheelDownPane select-pane \; send-keys -X -N 2 scroll-down
