--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -12,8 +12,7 @@ set -g default-terminal "screen-256color"
 set-window-option -g xterm-keys on
 set-option -sg escape-time 10
 
-# Move status bar to the top
-set-option -g status-position top
+set -g status-position top
 set-window-option -g automatic-rename off
 set-window-option -g allow-rename off
 set-window-option -g aggressive-resize on
