Another round of improvements to the tmux configs

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -12,6 +12,8 @@ set -g default-terminal "screen-256color"
 set-window-option -g xterm-keys on
 set-option -sg escape-time 10
 
+set -g status on
+set -g status-interval 5
 set -g status-position top
 set-window-option -g automatic-rename off
 set-window-option -g allow-rename off
@@ -63,8 +65,6 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
-# Set keybings for the command prompt
-
 # Set keybindings for the copy mode
 bind Escape copy-mode
 
@@ -92,3 +92,9 @@ bind -T copy-mode-vi D send-keys -X page-down
 # Handle mouse scrolling
 bind -T copy-mode-vi WheelUpPane select-pane \; send-keys -X -N 2 scroll-up
 bind -T copy-mode-vi WheelDownPane select-pane \; send-keys -X -N 2 scroll-down
+
+# Plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'samoshkin/tmux-plugin-sysstat'
+
+run '~/.tmux/plugins/tpm/tpm'
