--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -26,6 +26,7 @@ set -g history-limit 10000
 
 # Set mouse options
 set -g mouse on
+unbind -T root WheelUpPane
 # set -g mouse-select-pane on
 # set -g mouse-resize-pane on
 # set -g mouse-select-window on
