Replaced tmux-line with tmux-powerline

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,7 +3,7 @@
 #
 
 # Set the prefix
-set -g prefix C-x  # 
+set -g prefix C-x
 unbind C-b  # unbind send prefix
 bind C-x send-prefix
 
@@ -12,12 +12,26 @@ set -g default-terminal "screen-256color"
 set-window-option -g xterm-keys on
 set-option -sg escape-time 10
 
+# Configure the statusline and tmux-powerline
 set -g status on
-set -g status-interval 5
+set -g status-interval 2
 set -g status-position top
+set -g status-justify centre
+set -g status-left-length 70
+set -g status-right-length 90
+set -g status-left "#(~/.tmux/powerline/powerline.sh left)"
+set -g status-right "#(~/.tmux/powerline/powerline.sh right)"
+
+unbind [
+unbind ]
+bind [ run '~/.tmux/powerline/mute_powerline.sh left'
+bind ] run '~/.tmux/powerline/mute_powerline.sh right'
+
+# Set some useful options
 set-window-option -g automatic-rename off
 set-window-option -g allow-rename off
 set-window-option -g aggressive-resize on
+set -g base-index 1
 
 # Use vim bindings in the copy mode
 set-window-option -g mode-keys vi
