Bind copy-mode to v

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -81,7 +81,7 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 # Set keybindings for the copy mode
-bind Escape copy-mode
+bind v copy-mode
 
 unbind p
 bind p paste-buffer
