Tried fixing nvim cursor shapes in tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -11,6 +11,7 @@ bind C-x send-prefix
 set -g default-terminal "screen-256color"
 set-window-option -g xterm-keys on
 set-option -sg escape-time 10
+set -ga terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
 
 # Configure the statusline and tmux-powerline
 set -g status on
@@ -18,7 +19,7 @@ set -g status-interval 2
 set -g status-position top
 set -g status-justify centre
 set -g status-left-length 70
-set -g status-right-length 90
+set -g status-right-length 50
 set -g status-left "#(~/.tmux/powerline/powerline.sh left)"
 set -g status-right "#(~/.tmux/powerline/powerline.sh right)"
 
