Added support for tmux layouts

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -22,11 +22,18 @@ set -g status-left-length 70
 set -g status-right-length 50
 set -g status-left "#(~/.tmux/powerline/powerline.sh left)"
 set -g status-right "#(~/.tmux/powerline/powerline.sh right)"
+set-option -g status-style bg=colour237,fg=colour255
 
 unbind [
 unbind ]
 bind [ run '~/.tmux/powerline/mute_powerline.sh left'
 bind ] run '~/.tmux/powerline/mute_powerline.sh right'
+
+# Bind layouts
+# bind C-P command-prompt "source ~/.tmux/layouts/'%%'"
+bind P switch-client -T LAYOUT
+# bind -T LAYOUT q send-keys -X cancel
+bind -T LAYOUT s source ~/.tmux/layouts/scripting
 
 # Set some useful options
 set-window-option -g automatic-rename off
