--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -40,6 +40,7 @@ set-window-option -g automatic-rename off
 set-window-option -g allow-rename off
 set-window-option -g aggressive-resize on
 set -g base-index 1
+set-window-option -g pane-base-index 1
 
 # Use vim bindings in the copy mode
 set-window-option -g mode-keys vi
