Added key table for managing tmux panes/windows

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -31,9 +31,26 @@ bind ] run '~/.tmux/powerline/mute_powerline.sh right'
 
 # Bind layouts
 # bind C-P command-prompt "source ~/.tmux/layouts/'%%'"
-bind P switch-client -T LAYOUT
-# bind -T LAYOUT q send-keys -X cancel
+bind C-q switch-client -T LAYOUT
+bind -T LAYOUT q send-keys -X cancel
 bind -T LAYOUT s source ~/.tmux/layouts/scripting
+bind -T LAYOUT m source ~/.tmux/layouts/monitor
+
+# Bind
+bind C-m switch-client -T PANES
+bind -T PANES q switch-client -T root
+bind -T PANES h   select-pane -L      \; switch-client -T PANES
+bind -T PANES j   select-pane -D      \; switch-client -T PANES
+bind -T PANES k   select-pane -U      \; switch-client -T PANES
+bind -T PANES l   select-pane -R      \; switch-client -T PANES
+bind -T PANES H   resize-pane -L 5    \; switch-client -T PANES
+bind -T PANES J   resize-pane -D 5    \; switch-client -T PANES
+bind -T PANES K   resize-pane -U 5    \; switch-client -T PANES
+bind -T PANES L   resize-pane -R 5    \; switch-client -T PANES
+bind -T PANES C-h select-window -t :- \; switch-client -T PANES
+bind -T PANES C-l select-window -t :+ \; switch-client -T PANES
+bind -T PANES | split-window -h -c "#{pane_current_path}" \; switch-client -T PANES
+bind -T PANES - split-window -v -c "#{pane_current_path}" \; switch-client -T PANES
 
 # Set some useful options
 set-window-option -g automatic-rename off
@@ -66,6 +83,12 @@ bind c new-window -c "#{pane_current_path}"
 # Prompt for session/window name
 bind r command-prompt -I "#{window_name}" "rename-window '%%'"
 bind R command-prompt -I "#{session_name}" "rename-session '%%'"
+
+# Bindings for killing windows and panes
+unbind x
+unbind &
+bind-key -T prefix x confirm-before -p "kill pane #P? (y/n)" kill-pane
+bind-key -T prefix X confirm-before -p "kill window #W? (y/n)" kill-window
 
 # Bind split pane commands
 unbind '"'  # unbind split vertically
