--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -66,10 +66,12 @@ set -g history-limit 10000
 
 # Set mouse options
 set -g mouse on
-unbind -T root WheelUpPane
-# set -g mouse-select-pane on
-# set -g mouse-resize-pane on
-# set -g mouse-select-window on
+unbind -T root WheelUpStatus        # Disable select window with scroll wheel
+unbind -T root WheelDownStatus      # ""
+unbind -T root WheelUpPane          # Disable copy mode on scroll wheel up
+unbind -T root MouseDrag1Border     # Disable pane resize
+unbind -T root MouseDrag1Pane       # Disable select text with left mouse button
+unbind -T root MouseDown3Pane       # Disable paste on scroll wheel click
 
 # Bind key for reloading the config
 bind C-r source-file ~/.tmux.conf\; display-message "Config reloaded..."
