Remapped tmux binding for entering LAYOUT mode

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -30,7 +30,7 @@ bind [ run '~/.tmux/powerline/mute_powerline.sh left'
 bind ] run '~/.tmux/powerline/mute_powerline.sh right'
 
 # Bind layouts
-bind C-q switch-client -T LAYOUT
+bind C-n switch-client -T LAYOUT
 bind -T LAYOUT q send-keys -X cancel
 bind -T LAYOUT i command-prompt "source ~/.tmux/layouts/'%%'"
 bind -T LAYOUT s source ~/.tmux/layouts/scripting
