Seperate tmux configs for local and remote session

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -13,45 +13,6 @@ set-window-option -g xterm-keys on
 set-option -sg escape-time 10
 set -ga terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
 
-# Configure the statusline and tmux-powerline
-set -g status on
-set -g status-interval 2
-set -g status-position top
-set -g status-justify centre
-set -g status-left-length 70
-set -g status-right-length 50
-set -g status-left "#(~/.tmux/powerline/powerline.sh left)"
-set -g status-right "#(~/.tmux/powerline/powerline.sh right)"
-set-option -g status-style bg=colour237,fg=colour255
-
-unbind [
-unbind ]
-bind [ run '~/.tmux/powerline/mute_powerline.sh left'
-bind ] run '~/.tmux/powerline/mute_powerline.sh right'
-
-# Bind layouts
-bind C-n switch-client -T LAYOUT
-bind -T LAYOUT q send-keys -X cancel
-bind -T LAYOUT i command-prompt "source ~/.tmux/layouts/'%%'"
-bind -T LAYOUT s source ~/.tmux/layouts/scripting
-bind -T LAYOUT m source ~/.tmux/layouts/monitor
-
-# Bind
-bind C-m switch-client -T PANES
-bind -T PANES q switch-client -T root
-bind -T PANES h   select-pane -L      \; switch-client -T PANES
-bind -T PANES j   select-pane -D      \; switch-client -T PANES
-bind -T PANES k   select-pane -U      \; switch-client -T PANES
-bind -T PANES l   select-pane -R      \; switch-client -T PANES
-bind -T PANES H   resize-pane -L 5    \; switch-client -T PANES
-bind -T PANES J   resize-pane -D 5    \; switch-client -T PANES
-bind -T PANES K   resize-pane -U 5    \; switch-client -T PANES
-bind -T PANES L   resize-pane -R 5    \; switch-client -T PANES
-bind -T PANES C-h select-window -t :- \; switch-client -T PANES
-bind -T PANES C-l select-window -t :+ \; switch-client -T PANES
-bind -T PANES | split-window -h -c "#{pane_current_path}" \; switch-client -T PANES
-bind -T PANES - split-window -v -c "#{pane_current_path}" \; switch-client -T PANES
-
 # Set some useful options
 set-window-option -g automatic-rename off
 set-window-option -g allow-rename off
@@ -142,8 +103,7 @@ bind -T copy-mode-vi D send-keys -X page-down
 bind -T copy-mode-vi WheelUpPane select-pane \; send-keys -X -N 2 scroll-up
 bind -T copy-mode-vi WheelDownPane select-pane \; send-keys -X -N 2 scroll-down
 
-# Plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'samoshkin/tmux-plugin-sysstat'
-
-run '~/.tmux/plugins/tpm/tpm'
+# Source either tmux.local.conf or tmux.remote.conf
+if-shell 'test -n "$SSH_CLIENT"' \
+    'source-file ~/.tmux.remote.conf' \
+    'source-file ~/.tmux.local.conf'
