Fixed tmux remote sessions

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -104,6 +104,6 @@ bind -T copy-mode-vi WheelUpPane select-pane \; send-keys -X -N 2 scroll-up
 bind -T copy-mode-vi WheelDownPane select-pane \; send-keys -X -N 2 scroll-down
 
 # Source either tmux.local.conf or tmux.remote.conf
-if-shell 'test -n "$SSH_CLIENT"' \
-    'source-file ~/.tmux.remote.conf' \
-    'source-file ~/.tmux.local.conf'
+if-shell 'test "$SESSION_TYPE" = "local"' \
+    'source-file ~/.tmux.local.conf' \
+    'source-file ~/.tmux.remote.conf'
