--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -13,6 +13,10 @@ set-window-option -g xterm-keys on
 set-option -sg escape-time 10
 set -ga terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
 
+# Basic style configuration
+set -g pane-border-fg colour15
+set -g pane-active-border-fg colour6
+
 # Set some useful options
 set-window-option -g automatic-rename off
 set-window-option -g allow-rename off
