--- a/tmux/tmux.remote.conf
+++ b/tmux/tmux.remote.conf
@@ -5,4 +5,16 @@
 # Configure status line
 set -g status on
 set -g status-position bottom
-set -g status-justify left
+set -g status-justify centre
+set -g status-bg colour233
+set -g status-fg colour250
+set -g status-attr dim
+set -g status-left ''
+set -g status-right '#[fg=colour233,bg=colour240] %d-%m-%y #[fg=colour233,bg=colour245] %H:%M'
+set -g status-right-length 50
+set -g status-left-length 20
+
+setw -g window-status-current-fg colour6
+setw -g window-status-current-bg colour240
+setw -g window-status-current-attr bold
+setw -g window-status-current-format ' #I#[fg=colour8]:#[fg=colour15]#W#[fg=colour8]#F '
