--- a/tmux/tmux.remote.conf
+++ b/tmux/tmux.remote.conf
@@ -19,7 +19,11 @@ setw -g window-status-current-bg colour240
 setw -g window-status-current-attr bold
 setw -g window-status-current-format ' #I#[fg=colour15]:#W#[fg=colour6]#F '
 
-setw -g window-status-fg colour236
-setw -g window-status-bg colour3
+setw -g window-status-fg colour3
+setw -g window-status-bg colour236
 setw -g window-status-attr none
 setw -g window-status-format ' #I#[fg=colour7]:#W#[fg=colour3]#F '
+
+setw -g window-status-bell-attr bold
+setw -g window-status-bell-fg colour255
+setw -g window-status-bell-bg colour0
