--- a/tmux/tmux.remote.conf
+++ b/tmux/tmux.remote.conf
@@ -9,7 +9,7 @@ set -g status-justify left
 set -g status-bg colour233
 set -g status-fg colour250
 set -g status-attr dim
-set -g status-left ''
+set -g status-left '#{session_name}:#{window_index}.#{pane_index}'
 set -g status-right '#[fg=colour233,bg=colour240] %d-%m-%Y #[fg=colour233,bg=colour245] %H:%M '
 set -g status-right-length 50
 set -g status-left-length 20
