--- a/tmux/tmux.remote.conf
+++ b/tmux/tmux.remote.conf
@@ -8,9 +8,9 @@ set -g status-position bottom
 set -g status-justify left
 set -g status-bg colour233
 set -g status-fg colour255
-set -g status-attr dim
-set -g status-left '#{session_name}:#{window_index}.#{pane_index} '
-set -g status-right '#[fg=colour233,bg=colour240] %d-%m-%Y #[fg=colour233,bg=colour245] %H:%M '
+set -g status-attr none
+set -g status-left ' #[fg=230,bg=255]#{session_name}:#{window_index}.#{pane_index} '
+set -g status-right ' #[fg=colour233,bg=colour240] %d-%m-%Y #[fg=colour233,bg=colour245] %H:%M '
 set -g status-right-length 50
 set -g status-left-length 20
 
@@ -21,7 +21,7 @@ setw -g window-status-current-format ' #I#[fg=colour15]:#W#[fg=colour6]#F '
 
 setw -g window-status-fg colour3
 setw -g window-status-bg colour236
-setw -g window-status-attr none
+setw -g window-status-attr dim
 setw -g window-status-format ' #I#[fg=colour7]:#W#[fg=colour3]#F '
 
 setw -g window-status-bell-attr bold
