--- a/tmux/tmux.remote.conf
+++ b/tmux/tmux.remote.conf
@@ -6,23 +6,23 @@
 set -g status on
 set -g status-position bottom
 set -g status-justify left
-set -g status-bg colour233
 set -g status-fg colour255
+set -g status-bg colour233
 set -g status-attr none
-set -g status-left ' #[fg=230,bg=255]#{session_name}:#{window_index}.#{pane_index} '
+set -g status-left '#[fg=colour233,bg=colour245] #{session_name}:#{window_index}.#{pane_index} '
 set -g status-right ' #[fg=colour233,bg=colour240] %d-%m-%Y #[fg=colour233,bg=colour245] %H:%M '
 set -g status-right-length 50
 set -g status-left-length 20
 
-setw -g window-status-current-fg colour6
-setw -g window-status-current-bg colour240
+# setw -g window-status-current-fg colour6
+# setw -g window-status-current-bg colour240
 setw -g window-status-current-attr bold
-setw -g window-status-current-format ' #I#[fg=colour15]:#W#[fg=colour6]#F '
+setw -g window-status-current-format ' #[fg=colour6,bg=coour240] #I#[fg=colour15]:#W#[fg=colour6]#F '
 
-setw -g window-status-fg colour3
-setw -g window-status-bg colour236
-setw -g window-status-attr dim
-setw -g window-status-format ' #I#[fg=colour7]:#W#[fg=colour3]#F '
+# setw -g window-status-fg colour3
+# setw -g window-status-bg colour236
+setw -g window-status-attr none
+setw -g window-status-format ' #[fg=colour3,bg=colour236] #I#[fg=colour7]:#W#[fg=colour3]#F '
 
 setw -g window-status-bell-attr bold
 setw -g window-status-bell-fg colour255
