--- a/tmux/tmux.remote.conf
+++ b/tmux/tmux.remote.conf
@@ -9,7 +9,7 @@ set -g status-justify left
 set -g status-fg colour255
 set -g status-bg colour233
 set -g status-attr none
-set -g status-left '#[fg=colour233,bg=colour245] #{session_name}:#{window_index}.#{pane_index} '
+set -g status-left '#[fg=colour233,bg=colour245] #{session_name}:#{window_index}.#{pane_index} #[fg=colour255,bg=colour233] '
 set -g status-right '#[fg=colour233,bg=colour240] %d-%m-%Y #[fg=colour233,bg=colour245] %H:%M '
 set -g status-right-length 50
 set -g status-left-length 20
