--- a/tmux/tmux.remote.conf
+++ b/tmux/tmux.remote.conf
@@ -6,11 +6,11 @@
 set -g status on
 set -g status-position bottom
 set -g status-justify left
-set -g status-fg colour255
+set -g status-fg colour15
 set -g status-bg colour233
 set -g status-attr none
-set -g status-left '#[fg=colour233,bg=colour245] #{session_name}:#{window_index}.#{pane_index} #[fg=colour255,bg=colour233] '
-set -g status-right '#[fg=colour233,bg=colour245] %d-%m-%Y %H:%M '
+set -g status-left '#[fg=colour233,bg=colour245] #{session_name}:#{window_index}.#{pane_index} #[fg=colour15,bg=colour233] '
+set -g status-right '#[fg=colour233,bg=colour240] %d-%m-%Y #[fg=colour233,bg=colour245] %H:%M '
 set -g status-right-length 50
 set -g status-left-length 20
 
@@ -21,5 +21,5 @@ setw -g window-status-attr none
 setw -g window-status-format '#[fg=colour3,bg=colour236] #I#[fg=colour7]:#W#[fg=colour3]#F '
 
 setw -g window-status-bell-attr bold
-setw -g window-status-bell-fg colour255
+setw -g window-status-bell-fg colour15
 setw -g window-status-bell-bg colour0
