Added support for true color in tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -8,9 +8,10 @@ unbind C-b  # unbind send prefix
 bind C-x send-prefix
 
 # Set the terminal type
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 set-window-option -g xterm-keys on
 set-option -sg escape-time 10
+set -ga terminal-overrides ",xterm-256color:Tc"
 set -ga terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
 
 # Basic style configuration
