--- a/tmux/tmux.local.conf
+++ b/tmux/tmux.local.conf
@@ -1,5 +1,5 @@
 #
-# ~/.tmux.remote.conf
+# ~/.tmux.local.conf
 #
 
 # Configure the statusline and tmux-powerline
@@ -40,3 +40,14 @@ bind -T PANES C-h select-window -t :- \; switch-client -T PANES
 bind -T PANES C-l select-window -t :+ \; switch-client -T PANES
 bind -T PANES | split-window -h -c "#{pane_current_path}" \; switch-client -T PANES
 bind -T PANES - split-window -v -c "#{pane_current_path}" \; switch-client -T PANES
+
+# Plugins
+# set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin 'tmux-plugins/tmux-sensible'
+
+set -g @tpm_plugins '       \
+  tmux-plugins/tpm          \
+  tmux-plugins/tmux-yank    \
+'
+
+run '~/.tmux/plugins/tpm/tpm'
