Improved yay configuration

--- a/misc/yay.cfg
+++ b/misc/yay.cfg
@@ -8,8 +8,9 @@
 	"tarbin": "bsdtar",
 	"redownload": "no",
 	"rebuild": "no",
-	"answerclean": "",
-	"answeredit": "",
+	"answerclean": "None",
+	"answerdiff": "None",
+	"answeredit": "None",
 	"answerupgrade": "",
 	"gitbin": "git",
 	"gpgbin": "gpg",
@@ -23,5 +24,11 @@
 	"timeupdate": false,
 	"devel": false,
 	"cleanAfter": false,
-	"gitclone": true
+	"gitclone": true,
+	"provides": true,
+	"pgpfetch": true,
+	"upgrademenu": true,
+	"cleanmenu": true,
+	"diffmenu": true,
+	"editmenu": false
 }
