More modifications to yay configuration

--- a/misc/yay.cfg
+++ b/misc/yay.cfg
@@ -1,5 +1,5 @@
 {
-	"buildDir": "/home/pascal/.cache/yay",
+	"buildDir": "build",
 	"editor": "nvim",
 	"editorflags": "",
 	"makepkgbin": "makepkg",
@@ -23,7 +23,7 @@
 	"sudoloop": true,
 	"timeupdate": false,
 	"devel": false,
-	"cleanAfter": false,
+	"cleanAfter": true,
 	"gitclone": true,
 	"provides": true,
 	"pgpfetch": true,
