Correctly set TERM environment variable

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -8,7 +8,7 @@ unbind C-b  # unbind send prefix
 bind C-x send-prefix
 
 # Set the terminal type
-set -g default-terminal "xterm-256color"
+set -g default-terminal "tmux-256color"
 set-window-option -g xterm-keys on
 set-option -sg escape-time 10
 set -ga terminal-overrides ",xterm-256color:Tc"
