Adopted the new -style syntax

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -15,8 +15,8 @@ set -ga terminal-overrides ",xterm-256color:Tc"
 set -ga terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
 
 # Basic style configuration
-set -g pane-border-fg colour15
-set -g pane-active-border-fg colour6
+set -g pane-border-style fg=colour15
+set -g pane-active-border-style fg=colour6
 
 # Set some useful options
 set-window-option -g automatic-rename off
