Minor config changes

--- a/misc/yay.cfg
+++ b/misc/yay.cfg
@@ -20,8 +20,8 @@
 	"requestsplitn": 150,
 	"sortmode": 0,
 	"sudoloop": true,
-	"timeupdate": false,
-	"devel": false,
+	"timeupdate": true,
+	"devel": true,
 	"cleanAfter": true,
 	"gitclone": true,
 	"provides": true,
