--- a/misc/yay.cfg
+++ b/misc/yay.cfg
@@ -1,33 +1,34 @@
 {
-	"editor": "nvim",
-	"editorflags": "",
-	"makepkgbin": "makepkg",
-	"pacmanbin": "pacman",
-	"pacmanconf": "/etc/pacman.conf",
-	"tarbin": "bsdtar",
-	"redownload": "no",
-	"rebuild": "no",
-	"answerclean": "None",
-	"answerdiff": "None",
-	"answeredit": "None",
-	"answerupgrade": "",
-	"gitbin": "git",
-	"gpgbin": "gpg",
-	"gpgflags": "",
-	"mflags": "",
-	"sortby": "votes",
-	"gitflags": "",
-	"requestsplitn": 150,
-	"sortmode": 0,
-	"sudoloop": true,
-	"timeupdate": true,
-	"devel": true,
-	"cleanAfter": true,
-	"gitclone": true,
-	"provides": true,
-	"pgpfetch": true,
-	"upgrademenu": true,
-	"cleanmenu": true,
-	"diffmenu": true,
-	"editmenu": false
+    "editor": "nvim",
+    "editorflags": "",
+    "makepkgbin": "makepkg",
+    "pacmanbin": "pacman",
+    "pacmanconf": "/etc/pacman.conf",
+    "tarbin": "bsdtar",
+    "redownload": "no",
+    "rebuild": "no",
+    "answerclean": "None",
+    "answerdiff": "None",
+    "answeredit": "None",
+    "answerupgrade": "",
+    "gitbin": "git",
+    "gpgbin": "gpg",
+    "gpgflags": "",
+    "mflags": "",
+    "sortby": "votes",
+    "gitflags": "",
+    "requestsplitn": 150,
+    "sortmode": 0,
+    "sudoloop": true,
+    "timeupdate": true,
+    "devel": true,
+    "cleanAfter": true,
+    "removemake": "yes",
+    "gitclone": true,
+    "provides": true,
+    "pgpfetch": true,
+    "upgrademenu": true,
+    "cleanmenu": true,
+    "diffmenu": true,
+    "editmenu": false
 }
